// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styledComponents <DefaultContainer/> should render 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #f9fafb;
  border: solid 1px #dedeeb;
  border-radius: 4px;
  width: 100%;
  height: 32px;
}

<div
  class="c0"
/>
`;

exports[`styledComponents <DefaultContainer/> should render the active style 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #f5f5f8 !important;
  background-color: #f9fafb;
  border: solid 1px #dedeeb;
  border-radius: 4px;
  width: 100%;
  height: 32px;
}

<div
  class="c0"
/>
`;

exports[`styledComponents <Header/> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 .left {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .left.as-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
/>
`;

exports[`styledComponents <HeaderText/> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
}

.c0 .name {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #031A51;
  text-transform: initial;
  font-weight: 400;
}

.c0 .type {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #8697BF;
  text-transform: initial;
  font-weight: 400;
}

<div
  class="c0"
/>
`;

exports[`styledComponents <HeaderText/> should render with size='medium' 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
}

.c0 .name {
  font-family: 'Roboto',sans-serif;
  font-size: 15px;
  line-height: 24px;
  color: #031A51;
  font-weight: 400;
}

.c0 .type {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #8697BF;
  text-transform: initial;
  font-weight: 400;
}

<div
  class="c0"
/>
`;
